--- a/index.html
+++ b/index.html
@@ -27,25 +27,19 @@
           <span v-else><button  v-on:click="showCheckout" class="btn btn-warning checkout">Checkout</button></span>
           </div>
           <div v-if="showProduct">
-            
-              <div class="search-wrapper" style="margin-bottom: 30px;">
-                <input class="form-control" type="text" v-model="search" placeholder="Search title.."/>
-              </div>
-            </div>
-            <br><br>
-            <div class="wrapper">
-              <div class="card" v-for="post in filteredList" ::key="post.id">
-                <img class="card-img" :src="post.imgURL" />
-                <p>{{ post.title }}</p>
-                <p>{{post.location}}</p>
-                <p> ${{post.price}}</p>
-                <p>{{post.availability}}</p>
-                <button v-if="post.availability > 0" class="btn btn-secondary" v-on:click="addCart(post)">Add to Cart</button>
-                <button class="add" disabled="disabled" v-else>Add to Cart</button>
-                </a>
-              </div>
-            </div>
-          </div>
+            <div class=" card-header" style="text-align: center;">
+              <div class="asc">
+                Descending
+                <input type="radio" v-model="ascending" value="true" class="btn btn-danger">
+                  Ascending
+                <input type="radio" v-model="ascending" value="false" class="btn btn-danger">
+              </div>   
+              <span> <button v-on:click="sortPrice" class="btn btn-danger">Price</button></span>
+              <span><button v-on:click="sortTitle" class="btn btn-danger">title</button></span>
+              <span><button v-on:click="sortLocation" class="btn btn-danger">Location</button></span>
+              <span><button v-on:click="sortTitle" class="btn btn-danger">Availability</button></span>
+              <br><br>
+              
           <div v-else>
             <form class="formDiv">
               <div class="mb-3" style="margin-top: 40px;">
