--- a/index.html
+++ b/index.html
@@ -57,6 +57,42 @@
               </div>
             </div>
           </div>
-         
+          <div v-else>
+            <form class="formDiv">
+              <div class="mb-3" style="margin-top: 40px;">
+                Name:
+                <label for="exampleName" class="form-label">Name</label>
+                <input type="text"  v-model="name" id="exampleName" aria-describedby="nameHelp">
+              </div>
+              <div class="mb-3">
+                Phone Number:
+                <label for="number" class="form-label">Phone Number</label>
+                <input type="Text" v-model="number"  id="number" type="number">
+              </div>
+              <button v-if="nameV&&numberV" class="btn btn-primary submit" v-on:click="submitForm">Submit</button>
+              <button v-else disabled>Submit</button>
+            </form>
+            <div class="wrapper">
+              <div class="card" v-for="post in cartItems()">
+                <img class="card-img" v-bind:src="post.img" />
+                <p>{{ post.title }}</p>
+                <p>{{post.location}}</p>
+                <p> ${{post.price}}</p>
+                <button class="btn btn-secondary" v-on:click="removeItem(post.id)">Remove from Cart</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
+        <Script>
 </body>
 </html>
