--- a/index.html
+++ b/index.html
@@ -94,5 +94,7 @@
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous"></script>
         <Script>
+
+        </script>
 </body>
 </html>
