--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous"></script>
         <Script>
+            const app = new Vue({
+                el: '#app',
+                data: {
+                    search: '',
+                    value: true,
+                    arrayCart: [],
+                    showProduct: true,
+                    ascending: false,
+                    postList: lesson,
+                    name: '',
+                    number: ''
+                },
+
+            });
 
         </script>
 </body>
