--- a/index.html
+++ b/index.html
@@ -134,8 +134,46 @@
                 let showCart = this.arrayCart;
                 return showCart
                 },
-        });
+                removeItem(id) {
+                    let showcart = this.arrayCart
+                                let less = this.postList
+                                for (let i = 0; i < showcart.length; i++) {
+                                    console.log(showcart[i].id)
+                                    if (id == showcart[i].id) {
+                                        showcart.splice(i, 1)
+                                    }
+                                }
+                                for (let i = 0; i < less.length; i++) {
+                                    console.log(less[i].id)
+                                    if (id == less[i].id) {
+                                        less[i].stock += 1
 
+                                    }
+                                }
+                },
+                sortMethod(obj1, obj2) {
+                    if (obj1.title == obj2.title) return 0;
+                    if (obj1.title < obj2.title) return -1;
+                    return 1;
+                    },
+                    sortMethodPrice(obj1, obj2) {
+                    if (obj1.price == obj2.price) return 0;
+                    if (obj1.price < obj2.price) return -1;
+                    return 1;
+                    },
+                    sortMethodlocation(obj1, obj2) {
+                    if (obj1.location === obj2.location) return 0;
+                    if (obj1.location < obj2.location) return -1;
+                    return 1;
+                    },
+                    sortMethodavailability(obj1, obj2) {
+                    if (obj1.availability === obj2.availability) return 0;
+                    if (obj1.availability < obj2.availability) return -1;
+                    return 1;
+                    },
+
+                },
+        });
         </script>
 </body>
 </html>
