--- a/index.html
+++ b/index.html
@@ -74,26 +74,17 @@
             </form>
             <div class="wrapper">
               <div class="card" v-for="post in cartItems()">
-                <img class="card-img" v-bind:src="post.img" />
+                <img class="card-img" v-bind:src="post.imgURL" />
                 <p>{{ post.title }}</p>
                 <p>{{post.location}}</p>
                 <p> ${{post.price}}</p>
-                <button class="btn btn-secondary" v-on:click="removeItem(post.id)">Remove from Cart</button>
+                <button class="btn btn-secondary" v-on:click="removeItem($e, post.id)">Remove from Cart</button>
               </div>
             </div>
           </div>
         </div>
       </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"></script>
-        <Script>
+                <Script>
             const app = new Vue({
                 el: '#app',
                 data: {
@@ -134,7 +125,7 @@
                 let showCart = this.arrayCart;
                 return showCart
                 },
-                removeItem(id) {
+                removeItem(e,id) {
                     let showcart = this.arrayCart
                                 let less = this.postList
                                 for (let i = 0; i < showcart.length; i++) {
@@ -196,15 +187,15 @@
                     filteredList() {
                         let displayPost = this.postList
 
-                        displayPost = displayPost.filter(lesson => {
-                            return lesson.title.toLowerCase().includes(this.search.toLowerCase())||lesson.location.toLowerCase().includes(this.search.toLowerCase())
-                        })
-                        if(this.sortPrice){
-                            this.postList.sort(this.sortMethodPrice)
-                        }
-                        if(this.sortTitle){
-                            this.postList.sort(this.sortMethod)
-                        }
+                        // displayPost = displayPost.filter(lesson => {
+                        //     return lesson.title.toLowerCase().includes(this.search.toLowerCase())||lesson.location.toLowerCase().includes(this.search.toLowerCase())
+                        // })
+                        // if(this.sortPrice){
+                        //     this.postList.sort(this.sortMethodPrice)
+                        // }
+                        // if(this.sortTitle){
+                        //     this.postList.sort(this.sortMethod)
+                        // }
                         
                         
 
